updated main urls in templates for frontend

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -105,7 +105,7 @@
                   <div class="card-body pt-7 text-center">
                     <h3 class="text-white">Discover More</h3>
                     <p class="text-white opacity-8"> You will save a lot of time going from prototyping to full-functional code because all elements are implemented.</p>
-                    <a href="/ui-sections-features.html" class="btn btn-white btn-sm w-50 mx-auto mt-3">Start with Headers</a>
+                    <a href="/main/ui-sections-features.html" class="btn btn-white btn-sm w-50 mx-auto mt-3">Start with Headers</a>
                   </div>
                 </div>
               </div>
@@ -169,7 +169,7 @@
           <div class="col-lg-9">
             <div class="row">
               <div class="col-md-4 mt-md-0">
-                <a href="/ui-sections-hero-sections.html">
+                <a href="/main/ui-sections-hero-sections.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/headers.jpg" alt="hero">
                   </div>
@@ -180,7 +180,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-sections-features.html">
+                <a href="/main/ui-sections-features.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/features.jpg" alt="features">
                   </div>
@@ -463,7 +463,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="/ui-navigation-navbars.html">
+                <a href="/main/ui-navigation-navbars.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/navbars.jpg" alt="navbars">
                   </div>
@@ -474,7 +474,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-navigation-nav-tabs.html">
+                <a href="/main/ui-navigation-nav-tabs.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/nav-tabs.jpg" alt="navtabs">
                   </div>
@@ -485,7 +485,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-navigation-pagination.html">
+                <a href="/main/ui-navigation-pagination.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/pagination.jpg" alt="pagination">
                   </div>
@@ -550,7 +550,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-input-forms.html">
+                <a href="/main/ui-input-forms.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/forms.jpg" alt="forms">
                   </div>
@@ -563,7 +563,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="/ui-input-inputs.html">
+                <a href="/main/ui-input-inputs.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/inputs.jpg" alt="inputs">
                   </div>
@@ -586,7 +586,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="/ui-catchers-alerts.html">
+                <a href="/main/ui-catchers-alerts.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/alerts.jpg" alt="alerts">
                   </div>
@@ -618,7 +618,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-catchers-tooltips-popovers.html">
+                <a href="/main/ui-catchers-tooltips-popovers.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/popovers.jpg" alt="tooltip_popover">
                   </div>
@@ -631,7 +631,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
-                <a href="/ui-catchers-modals.html">
+                <a href="/main/ui-catchers-modals.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/modals.jpg" alt="modals">
                   </div>
@@ -654,7 +654,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="/ui-elements-buttons.html">
+                <a href="/main/ui-elements-buttons.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/buttons.jpg" alt="buttons">
                   </div>
@@ -665,7 +665,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-elements-avatars.html">
+                <a href="/main/ui-elements-avatars.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/avatars.jpg" alt="avatars">
                   </div>
@@ -676,7 +676,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-elements-dropdowns.html">
+                <a href="/main/ui-elements-dropdowns.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/dropdowns.jpg" alt="dropdowns">
                   </div>
@@ -689,7 +689,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="/ui-elements-toggles.html">
+                <a href="/main/ui-elements-toggles.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/switch.jpg" alt="toggles">
                   </div>
@@ -744,7 +744,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
-                <a href="/ui-elements-breadcrumbs.html">
+                <a href="/main/ui-elements-breadcrumbs.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/breadcrumbs.jpg" alt="breadcrumbs">
                   </div>
@@ -755,7 +755,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-elements-badges.html">
+                <a href="/main/ui-elements-badges.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/badges.jpg" alt="badges">
                   </div>
@@ -766,7 +766,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-elements-progress-bars.html">
+                <a href="/main/ui-elements-progress-bars.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/progress.jpg" alt="progress">
                   </div>
@@ -800,7 +800,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="/ui-elements-typography.html">
+                <a href="/main/ui-elements-typography.html">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/typography.jpg" alt="typography">
                   </div>
@@ -832,7 +832,7 @@
           <div class="col-md-8">
             <div class="row mt-4">
               <div class="col-md-6">
-                <a href="/about-us.html">
+                <a href="/main/about-us.html">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/about-us.jpg" alt="aboutus">
                   </div>
@@ -842,7 +842,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-0 mt-5">
-                <a href="/contact-us.html">
+                <a href="/main/contact-us.html">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/contact-us.jpg" alt="contacus">
                   </div>
@@ -852,7 +852,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-3 mt-6">
-                <a href="/sign-in.html">
+                <a href="/main/sign-in.html">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/sign-in.jpg" alt="signin">
                   </div>
@@ -862,7 +862,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-3 mt-6">
-                <a href="/author.html">
+                <a href="/main/author.html">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/author.jpg" alt="author">
                   </div>
