--- a/frontend/templates/home/django-material-kit/sign-up.html
+++ b/frontend/templates/home/django-material-kit/sign-up.html
@@ -63,7 +63,7 @@
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Already have an account?
-                  <a href="/sign-in.html" class="text-primary text-gradient font-weight-bold">Sign IN</a>
+                  <a href="/main/sign-in.html" class="text-primary text-gradient font-weight-bold">Sign IN</a>
                 </p>
               </form>
             </div>
