--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -28,19 +28,19 @@
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
                         Landing Pages
                       </h6>
-                      <a href="/about-us.html" class="dropdown-item border-radius-md">
+                      <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
                       </a>
-                      <a href="/contact-us.html" class="dropdown-item border-radius-md">
+                      <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
                       </a>
-                      <a href="/author.html" class="dropdown-item border-radius-md">
+                      <a href="/main/author.html" class="dropdown-item border-radius-md">
                         <span>Author</span>
                       </a>
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
                         Account
                       </h6>
-                      <a href="/sign-in.html" class="dropdown-item border-radius-md">
+                      <a href="/main/sign-in.html" class="dropdown-item border-radius-md">
                         <span>Sign In</span>
                       </a>
                     </div>
@@ -48,19 +48,19 @@
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
                         Landing Pages
                       </h6>
-                      <a href="/about-us.html" class="dropdown-item border-radius-md">
+                      <a href="/main/about-us.html" class="dropdown-item border-radius-md">
                         <span>About Us</span>
                       </a>
-                      <a href="/contact-us.html" class="dropdown-item border-radius-md">
+                      <a href="/main/contact-us.html" class="dropdown-item border-radius-md">
                         <span>Contact Us</span>
                       </a>
-                      <a href="/author.html" class="dropdown-item border-radius-md">
+                      <a href="/main/author.html" class="dropdown-item border-radius-md">
                         <span>Author</span>
                       </a>
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
                         Account
                       </h6>
-                      <a href="/sign-in.html" class="dropdown-item border-radius-md">
+                      <a href="/main/sign-in.html" class="dropdown-item border-radius-md">
                         <span>Sign In</span>
                       </a>
                     </div>
